@@ -1,3 +1,7 @@
+2007-08-07 yo
+* Take setGroupValue and _setGroupValue into account for the interaction workflow.
+* Rename workflow transitions and states for consistency.
+
 2007-05-22 yo
 * The budget constraint should check start_date_range_min and start_date_range_max, instead of start_date.
 
